# can-gripping-robot

./: Dockerfile  README.md  docker-compose.yml  setup.sh
can-gripper/: MovementController.py  SodaController.py  VisionController.py  VoiceController.py  gripper_wobble.py  main.py  requirements.txt
can-gripper/owl_model/: apriltag.ipynb
demos/: bartender.py  joint_position_control.py
movement/: VisionControllerCopy.py  arm.py  camera_test.py  finalMove.py  gripper.py  moveCoords.py  moveNew.py  oldMoveCoords.py  test_model.py
owl_model/: aruco.ipynb  camera.ipynb
src/wx200_robot/wx200_control/: CMakeLists.txt
src/wx200_robot/wx200_control/scripts/: wx200_control.py
v1/src/wx200_robot/wx200_control/: package.xml
v1/src/wx200_robot/wx200_control/scripts/: wx200_control.py
